--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: ruby
 bundler_args: --without integration development
 rvm:
   - 2.1
-script: bundle exec rake spec
+script:
+  - bundle exec rake style
+  - bundle exec rake spec
